--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   <!-- Header -->
   <header>
     <h1><i class="fa-solid fa-user"></i>Mansi Agrawal</h1>
-    <p>Front-End Developer | HTML5 | CSS3 | JavaScript | PHP | VB.Net | GitHub </p>
+    <p>Web Developer | Front-End Developer | HTML5 | CSS3 | JavaScript | PHP | GitHub </p>
   </header>
 
   <!-- About -->
   <section id="about">
     <img src="images/Mansi_Agrawal.png" alt="Mansi Agrawal">
     <p> Hello! I am Mansi Agrawal, a beginner web development learner. I love creating responsive and clean websites. 
-        I know HTML and CSS, and I am also learning JavaScript, PHP, VB.Net to build creative and responsive websites. 
+        I know HTML and CSS, and I am also learning JavaScript, PHP and MySQL to build creative and responsive websites. 
         I enjoy learning new design ideas and improving my coding skills every day.
-        My goal is to become a skilled front-end developer and work on real-world projects.
+        My goal is to become a skilled Web Developer and work on real-world projects.
     </p>
   </section>
 
@@ -33,7 +33,6 @@
       <li><i class="fa-brands fa-css3-alt"></i> CSS3 - Responsive Design using Flexbox & relative units</li>
       <li><i class="fa-brands fa-js"></i> JavaScript (Basics)</li>
       <li><i class="fa-brands fa-php"></i> PHP (Basics)</li>
-      <li><i class="fa-brands fa-code"></i> VB.Net (Basics)</li>
       <li><i class="fa-brands fa-database"></i> MySQL (Basic Knowledge)</li>
       <li><i class="fa-brands fa-github"></i> Git & GitHub (Version Control)</li>
       <li><i class="fa-brands fa-wordpress"></i> WordPress (Beginner - can create basic pages)</li>
@@ -52,10 +51,10 @@
     </a>
     <p>
       <a href="https://mansi-portfolio2.netlify.app/" target="_blank">Live Demo</a> | 
-      <a href="https://github.com/mansi-agrawal-codes/codsoft-intern.git/" target="_blank">Source Code</a>
+      <a href="https://github.com/mansi-agrawal-codes/My-Portfolio2.git/" target="_blank">Source Code</a>
     </p>
   </div>
-
+  <br>
   <div class="project">
     <h3>Cityscapes Image Gallery</h3>
     <p>An image gallery showcasing beautiful cityscapes, built using HTML and CSS with a clean layout.</p>
@@ -67,6 +66,7 @@
       <a href="https://github.com/mansi-agrawal-codes/Cityscapes-Image-gallery.git" target="_blank">Source Code</a>
     </p>
   </div>
+  <br>
 
   <div class="project">
     <h3>Amazon Clone</h3>
@@ -79,6 +79,7 @@
       <a href="https://github.com/mansi-agrawal-codes/amazon-clone-app-project.git" target="_blank">Source Code</a>
     </p>
   </div>
+  <br>
   <div class="project">
     <h3>Calculator</h3>
     <p>A simple calculator built using HTML, CSS and JavaScript to perform basic arithmetic operations with a clean and responsive design.</p>
@@ -87,7 +88,7 @@
     </a>
     <p>
       <a href="https://mansi-calculator.netlify.app/" target="_blank">Live Demo</a> | 
-      <a href="https://github.com/mansi-agrawal-codes/codsoft-intern.git/" target="_blank">Source Code</a>
+      <a href="https://github.com/mansi-agrawal-codes/calculator.git/" target="_blank">Source Code</a>
     </p>
   </div>
   </div>
